fixtures/cs-rng-02/good/math-random-auth.ts
export function generateSessionToken() {
	return Math.random().toString(36);
}
