fixtures/cs-rng-02/bad/random-bytes-variable-literal.ts
import { randomBytes } from "crypto";
const n = 12;
export function generateSessionToken() {
	return randomBytes(n).toString("hex");
}
